<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.design.vikas.projectzeronanodegree.MainActivity">

    <TextView
        android:id="@+id/tvHeading"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/color_button_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_heading" />

    <LinearLayout
        android:padding="16dp"
        android:layout_below="@+id/tvHeading"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btMovie1"
        android:text="@string/project_1"
        android:layout_marginBottom="16dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:background="@color/color_button_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btMovie2"
            android:text="@string/project_2"
            android:layout_marginBottom="16dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/color_button_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btMovie3"
            android:text="@string/project_3"
            android:layout_marginBottom="16dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/color_button_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btMovie4"
            android:text="@string/project_4"
            android:layout_marginBottom="16dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/color_button_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btMovie5"
            android:text="@string/project_5"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/color_button_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
